# ripo

./: Cargo.toml  LICENSE
src/: args.txt  cli.yml  main.rs  objects.rs  ripo_error.rs  subcommands.rs
src/objects/: Arch.rs  arch.rs  fat_binary.rs
src/subcommands/: archs.rs  create.rs  detailed_info.rs  extract.rs
