[package]
name = "ripo"
version = "0.1.0"
authors = ["BEAN <22887835+bean1310@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
thiserror = "1.0.24"